JIRA-#### #time 45m #comment Add SpotBugs to project & address all findings